<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/drawer_group_main"
        android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_home"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/drawer_history"
            android:icon="@drawable/ic_history"
            android:title="@string/nav_history" />
        <item
            android:id="@+id/drawer_gallery"
            android:icon="@drawable/ic_gallery"
            android:title="@string/nav_gallery" />
        <item
            android:id="@+id/drawer_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/nav_settings" />
    </group>
    <group android:id="@+id/drawer_group_more">
        <item
            android:id="@+id/drawer_help"
            android:icon="@drawable/ic_help"
            android:title="@string/nav_help" />
        <item
            android:id="@+id/drawer_about"
            android:icon="@drawable/ic_info"
            android:title="@string/nav_about" />
    </group>
</menu>
